<resources>
    <string name="app_name">Covid19App</string>
    <string name="covid19_stats">Covid19 Stats</string>
    <string name="total_case">Total Cases</string>
    <string name="country">Country</string>
    <string name="recovered">Recovered</string>
    <string name="death">Deaths</string>
    <string name="confirmed">Confirmed</string>
    <string name="global">Global</string>
    <string name="filter_by">Filter By</string>
    <string name="reset">Reset</string>
    <string name="no_result">No Result</string>
</resources>
