<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/coordinator"
    android:background="@color/colorWhite"
    tools:context=".ui.MainActivity">

  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent">

      <TextView
          android:id="@+id/label_covid_stats"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_margin="@dimen/_12sdp"
          android:fontFamily="@font/gothamrounded_bold"
          android:padding="@dimen/_8sdp"
          android:text="@string/covid19_stats"
          android:textColor="@color/colorFont"
          android:textSize="@dimen/_18ssp"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

      <androidx.cardview.widget.CardView
          android:id="@+id/card_total_case"
          android:layout_width="@dimen/_90sdp"
          android:layout_height="wrap_content"
          android:layout_marginStart="@dimen/_12sdp"
          android:layout_marginTop="@dimen/_8sdp"
          android:layout_marginEnd="@dimen/_4sdp"
          android:elevation="@dimen/_2sdp"
          app:cardBackgroundColor="@color/colorBlue"
          app:cardCornerRadius="@dimen/_8sdp"
          app:layout_constraintEnd_toStartOf="@id/card_total_recovered"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/label_covid_stats">

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:gravity="center"
              android:orientation="vertical"
              android:padding="@dimen/_12sdp">

              <TextView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:fontFamily="@font/gothamrounded_book"
                  android:text="@string/confirmed"
                  android:textColor="@color/colorWhite"
                  android:textSize="@dimen/_10ssp"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintTop_toTopOf="parent" />

              <TextView
                  android:id="@+id/tv_confirm"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="@dimen/_4sdp"
                  android:fontFamily="@font/gothamrounded_medium"
                  tools:text="5581829"
                  android:textColor="@color/colorWhite"
                  android:textSize="@dimen/_12ssp"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintTop_toTopOf="parent" />

              <TextView
                  android:id="@+id/tv_confirm_new"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="@dimen/_4sdp"
                  android:fontFamily="@font/gothamrounded_book"
                  tools:text="[+400]"
                  android:textColor="@color/colorWhite"
                  android:textSize="@dimen/_8ssp"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintTop_toTopOf="parent" />

          </LinearLayout>

      </androidx.cardview.widget.CardView>

      <androidx.cardview.widget.CardView
          android:id="@+id/card_total_recovered"
          android:layout_width="@dimen/_90sdp"
          android:layout_height="wrap_content"
          android:layout_marginStart="@dimen/_8sdp"
          android:layout_marginTop="@dimen/_8sdp"
          android:layout_marginEnd="@dimen/_4sdp"
          android:elevation="@dimen/_2sdp"
          app:cardBackgroundColor="@color/colorOrange"
          app:cardCornerRadius="@dimen/_8sdp"
          app:layout_constraintEnd_toStartOf="@id/card_total_death"
          app:layout_constraintStart_toEndOf="@id/card_total_case"
          app:layout_constraintTop_toBottomOf="@id/label_covid_stats">

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:gravity="center"
              android:orientation="vertical"
              android:padding="@dimen/_12sdp">

              <TextView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:fontFamily="@font/gothamrounded_book"
                  android:text="@string/recovered"
                  android:textColor="@color/colorWhite"
                  android:textSize="@dimen/_10ssp"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintTop_toTopOf="parent" />

              <TextView
                  android:id="@+id/tv_recovered"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="@dimen/_4sdp"
                  android:fontFamily="@font/gothamrounded_medium"
                  tools:text="5581829"
                  android:textColor="@color/colorWhite"
                  android:textSize="@dimen/_12ssp"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintTop_toTopOf="parent" />

              <TextView
                  android:id="@+id/tv_recovered_new"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="@dimen/_4sdp"
                  android:fontFamily="@font/gothamrounded_book"
                  tools:text="[+400]"
                  android:textColor="@color/colorWhite"
                  android:textSize="@dimen/_8ssp"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintTop_toTopOf="parent" />

          </LinearLayout>

      </androidx.cardview.widget.CardView>

      <androidx.cardview.widget.CardView
          android:id="@+id/card_total_death"
          android:layout_width="@dimen/_90sdp"
          android:layout_height="wrap_content"
          android:layout_marginStart="@dimen/_8sdp"
          android:layout_marginTop="@dimen/_8sdp"
          android:layout_marginEnd="@dimen/_12sdp"
          android:elevation="@dimen/_2sdp"
          app:cardBackgroundColor="@color/colorRed"
          app:cardCornerRadius="@dimen/_8sdp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toEndOf="@id/card_total_recovered"
          app:layout_constraintTop_toBottomOf="@id/label_covid_stats">

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:gravity="center"
              android:orientation="vertical"
              android:padding="@dimen/_12sdp">

              <TextView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:fontFamily="@font/gothamrounded_book"
                  android:text="@string/death"
                  android:textColor="@color/colorWhite"
                  android:textSize="@dimen/_10ssp"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintTop_toTopOf="parent" />

              <TextView
                  android:id="@+id/tv_deaths"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="@dimen/_4sdp"
                  android:fontFamily="@font/gothamrounded_medium"
                  tools:text="5581829"
                  android:textColor="@color/colorWhite"
                  android:textSize="@dimen/_12ssp"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintTop_toTopOf="parent" />

              <TextView
                  android:id="@+id/tv_deaths_new"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="@dimen/_4sdp"
                  android:fontFamily="@font/gothamrounded_book"
                  tools:text="[+400]"
                  android:textColor="@color/colorWhite"
                  android:textSize="@dimen/_8ssp"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintTop_toTopOf="parent" />

          </LinearLayout>

      </androidx.cardview.widget.CardView>


      <LinearLayout
          android:id="@+id/ll_header"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/_12sdp"
          android:background="@color/colorLightGrey"
          android:gravity="center"
          android:padding="@dimen/_4sdp"
          app:layout_constraintTop_toBottomOf="@id/tv_global"
          app:layout_goneMarginTop="@dimen/_8sdp">

          <TextView
              android:id="@+id/label_country"
              android:layout_width="@dimen/_80sdp"
              android:layout_height="wrap_content"
              android:fontFamily="@font/gothamrounded_medium"
              android:text="@string/country"
              android:textAlignment="center"
              android:textColor="@color/colorFont"
              android:textSize="@dimen/_10sdp" />

          <TextView
              android:id="@+id/label_total_case"
              android:layout_width="@dimen/_80sdp"
              android:layout_height="wrap_content"
              android:fontFamily="@font/gothamrounded_medium"
              android:text="@string/total_case"
              android:textAlignment="center"
              android:textColor="@color/colorFont"
              android:textSize="@dimen/_10sdp" />

          <TextView
              android:id="@+id/label_recovered"
              android:layout_width="@dimen/_80sdp"
              android:layout_height="wrap_content"
              android:fontFamily="@font/gothamrounded_medium"
              android:text="@string/recovered"
              android:textAlignment="center"
              android:textColor="@color/colorFont"
              android:textSize="@dimen/_10sdp" />

          <TextView
              android:id="@+id/label_deaths"
              android:layout_width="@dimen/_50sdp"
              android:layout_height="wrap_content"
              android:fontFamily="@font/gothamrounded_medium"
              android:text="@string/death"
              android:textAlignment="center"
              android:textColor="@color/colorFont"
              android:textSize="@dimen/_10sdp" />

      </LinearLayout>

      <TextView
          android:id="@+id/tv_global"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="@dimen/_12sdp"
          android:layout_marginTop="@dimen/_12sdp"
          android:fontFamily="@font/gothamrounded_medium"
          android:text="@string/global"
          android:textColor="@color/colorFont"
          android:textSize="@dimen/_14ssp"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/card_total_recovered" />

      <TextView
          android:id="@+id/iv_filter"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/_12sdp"
          android:layout_marginEnd="@dimen/_12sdp"
          android:src="@drawable/ic_filter"
          android:text="Filter"
          android:gravity="center"
          android:drawablePadding="@dimen/_4sdp"
          android:drawableStart="@drawable/ic_filter"
          android:textSize="@dimen/_12ssp"
          android:fontFamily="@font/gothamrounded_book"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintTop_toBottomOf="@id/card_total_recovered" />

      <TextView
          android:id="@+id/tv_filter_text"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/_16sdp"
          android:layout_marginEnd="@dimen/_12sdp"
          android:src="@drawable/ic_filter"
          android:singleLine="true"
          android:textColor="@color/colorRed"
          tools:text="Filtered by Total Case, Recovered &amp; Death"
          android:gravity="center"
          android:textStyle="italic"
          android:textSize="@dimen/_8ssp"
          android:layout_marginStart="@dimen/_12sdp"
          android:fontFamily="@font/gothamrounded_book"
          app:layout_constraintStart_toEndOf="@id/tv_global"
          app:layout_constraintEnd_toStartOf="@id/iv_filter"
          app:layout_constraintTop_toBottomOf="@id/card_total_recovered" />

      <androidx.recyclerview.widget.RecyclerView
          android:id="@+id/rcv_list"
          android:layout_width="match_parent"
          android:layout_height="0dp"
          android:layout_marginTop="@dimen/_8sdp"
          android:scrollbars="vertical"
          app:fastScrollEnabled="true"
          app:fastScrollHorizontalThumbDrawable="@drawable/fast_scroll_thumb"
          app:fastScrollHorizontalTrackDrawable="@drawable/fast_scroll_track"
          app:fastScrollVerticalThumbDrawable="@drawable/fast_scroll_thumb"
          app:fastScrollVerticalTrackDrawable="@drawable/fast_scroll_track"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/ll_header"
          tools:listitem="@layout/item_list" />

      <TextView
          android:id="@+id/tv_no_result"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/no_result"
          android:visibility="gone"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          android:fontFamily="@font/gothamrounded_light"/>

      <ProgressBar
          android:id="@+id/progress_circular"
          android:layout_width="@dimen/_22sdp"
          android:layout_height="@dimen/_22sdp"
          android:indeterminateTint="@color/colorBlue"
          android:text="@string/no_result"
          android:visibility="gone"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          android:fontFamily="@font/gothamrounded_light"/>

  </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>